			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02p: *********************************

BUG: (06/23/05, GVG) Problem to detect min size if elements were touching other nodes of the same layer
(wells in Bug #396). The code was checking only one direction (X or Y)
FIX: Function to iterate along all possible directions (X, Y).

IMP: (06/23/05, GVG) Refactoring of DRC supporting classes for DesignRules tab. More changes in DesignRules tab

BUG: (06/23/05, SMR) CDL output writes include statements (Bug #387)
FIX: Ignore subcircuit overrides when writing CDL.

BUG: (06/23/05, SMR) Cannot connect "Simulation Probe" nodes
FIX: Make them have universal connectivity.

BUG: (06/23/05, DN) Arc properties not preserved when using Duplicate (Bug #391).
FIX: In ArcInst.copyConstraintsFrom assign newBits ti userBits.

BUG: (06/23/05, DN) Network module complains on unconnected pin in GEM and FIDO technologies.
FIX: Don't check in cells with these technologies (NetCell.makeDrawns).

IMP: (06/22/05, GVG) DRC: Sweep as default algorithm. Capacitance demo out of 3D menu.
List Layer Coverage on Cell moved to DRC menu. Ability to abort coverage job (Bug #389).
Same printing for List Coverage on Cell and Check Area Coverage.

IMP: (06/21/05, SMR) Improved waveform window titles.

IMP: (06/21/05, SMR) Improvements to "Design Rules" tab.

IMP: (06/21/05, SMR) Added commands for curved arcs.

IMP: (06/21/05, GVG) RPO resistors in 90nm technology

BUG: (06/20/05, GVG) Displaying DRC error in wrong window frame while checking min defects (Bug #383)
FIX: Carrying down into the hierarchy the cell which triggered the checking.

IMP: (06/20/05, SMR) Changed "Design Rules" preferences to handle multiple wide rules.

BUG: (06/20/05, SMR) "Make Selected Easy" and "Make Selected Hard" commands crash.
FIX: Put them in a job.
