@@ -4,6 +4,8 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.02p: *********************************
 
+IMP: (06/23/05, RK) For netlist errors, save NccGlobals so IvanM can report errors
+
 BUG: (06/23/05, GVG) Problem to detect min size if elements were touching other nodes of the same layer
 (wells in Bug #396). The code was checking only one direction (X or Y)
 FIX: Function to iterate along all possible directions (X, Y).
